Update Pictures and Projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
+        <a href="#portfolio">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -41,59 +41,60 @@
         <!-- <h3>And I'm A <span class="auto-type"></span></h3> -->
         <h3>And I'm A <span class="multiple-text"> </span></h3>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eum
-          reiciendis impedit sequi illum minima fugiat, itaque saepe ex aliquam
-          cupiditate voluptate alias ipsa omnis provident debitis qui beatae
-          nam.
+          Aspiring to become a MERN Stack Developer. I specialize in React, JavaScript, Tailwind CSS, and use Git and GitHub for version control. I strive to create visually appealing and functional websites that enhance user experiences. My goal is to leverage my skills in frontend development and backend technologies to build innovative web applications that solve real-world problems. 
         </p>
         <div class="social-media">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/shubham-singh8545/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/Shubh0433"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://x.com/shubh2363"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="https://www.instagram.com/shubh.2361/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </div>
 
-        <a href="#" class="btn">Download CV</a>
+        <a href="./assets/Shubham_singh.pdf" class="btn">Download CV</a>
       </div>
 
       <div class="home-img">
-        <img src="img/Shubh.jpg" alt="Profile Img" />
+        <img src="img/ProfileDP.jpg" alt="Profile Img" />
       </div>
     </section>
 
     <!-- About section Design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="img/Shubh.jpg" alt="" />
+        <img src="img/aboutPic.jpeg" alt="" />
       </div>
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Frontend Developer</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus
-          unde optio delectus dolorum. Repellat dolor, ad officia,
-          necessitatibus quae architecto praesentium, iusto atque repudiandae
-          accusantium veniam perspiciatis nihil! Voluptates sapiente voluptatum
-          quibusdam! Cupiditate odit, optio voluptates veniam quisquam culpa
-          repellendus consectetur dolorem ea, deserunt, veritatis ab sint
-          pariatur officiis enim.
+          <p><p>As a Frontend Developer, I specialize in creating visually appealing and highly functional user interfaces. With expertise in HTML, CSS, JavaScript, and React, I build seamless and responsive web experiences. I thrive in collaborative environments, continuously learning and staying updated with the latest industry trends to deliver high-quality, performant, and accessible web solutions.</p>
         </p>
-        <a href="#" class="btn">Read more</a>
+
+        </p>
+        <a href="https://www.linkedin.com/in/shubham-singh8545/" class="btn"
+          >Know more</a
+        >
       </div>
     </section>
 
     <!-- Services Section Design -->
     <section class="services" id="services">
-      <h2 class="headinng">My <span>Services</span></h2>
+      <h2 class="heading">My <span>Services</span></h2>
 
       <div class="services-container">
         <div class="services-box">
           <i class="fa-sharp fa-solid fa-code"></i>
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
-            repellendus maxime tenetur iste minima amet sed facere, consequatur
-            deleniti optio impedit. Asperiores ab nemo maiores.
+            I specialize in crafting high-quality, responsive websites tailored to business needs, from landing pages to complex web applications.
           </p>
 
           <a href="#" class="btn">Read More</a>
@@ -102,14 +103,12 @@
           <i class="fa-sharp fa-solid fa-palette"></i>
           <h3>UI/UX Designing</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
-            repellendus maxime tenetur iste minima amet sed facere, consequatur
-            deleniti optio impedit. Asperiores ab nemo maiores.
+            Specializing in UI/UX design solutions that prioritize clarity and functionality, ensuring user-centric experiences across all projects.
           </p>
 
           <a href="#" class="btn">Read More</a>
         </div>
-        <div class="services-box">
+        <!-- <div class="services-box">
           <i class="fa-brands fa-android"></i>
           <h3>App Development</h3>
           <p>
@@ -118,7 +117,7 @@
             deleniti optio impedit. Asperiores ab nemo maiores.
           </p>
 
-          <a href="#" class="btn">Read More</a>
+          <a href="#" class="btn">Read More</a> -->
         </div>
       </div>
     </section>
@@ -128,52 +127,52 @@
       <h2 class="heading">Latest <span>Projects</span></h2>
 
       <div class="portfolio-container">
-        <div class="portfolio-box">
-          <img src="img/Shubh.jpg" alt="" />
+        <!-- <div class="portfolio-box">
+          <img src="img/1.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="img/Shubh.jpg" alt="" />
+          <img src="img/2.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="img/Shubh.jpg" alt="" />
+          <img src="img/3.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+          </div>
+        </div> -->
+        <div class="portfolio-box">
+          <img src="img/1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Simon Game</h4>
+            <p>Simon game, built with HTML, CSS, and JavaScript, challenges players to remember and repeat a sequence of colors and sounds, testing both memory and reflexes in a fun and interactive way.</p>
+            <a href="https://github.com/Shubh0433/Simon-Game/"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="img/Shubh.jpg" alt="" />
+          <img src="img/2.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+            <h4>Personal Portfolio</h4>
+            <p>showcases a mastery of crafting responsive websites and robust web applications, blending creativity with technical expertise to deliver impactful digital experiences tailored to diverse business needs.</p>
+            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="img/Shubh.jpg" alt="" />
+          <img src="img/3.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <i class="fa-sharp fa-solid fa-up-right-from-square"></i>
-          </div>
-        </div>
-        <div class="portfolio-box">
-          <img src="img/Shubh.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+            <h4>Dice Game</h4>
+            <p>A fun and engaging dice game created using HTML, CSS, and JavaScript, offering players the thrill of rolling virtual dice with interactive animations.</p>
+            <a href="https://github.com/Shubh0433/Dice-Game"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
