added Simon Game project

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div>
         </div> -->
         <div class="portfolio-box">
-          <img src="img/1.png" alt="" />
+          <img src="img/1.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Simon Game</h4>
             <p>Simon game, built with HTML, CSS, and JavaScript, challenges players to remember and repeat a sequence of colors and sounds, testing both memory and reflexes in a fun and interactive way.</p>
