--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <div class="portfolio-layer">
             <h4>Simon Game</h4>
             <p>Simon game, built with HTML, CSS, and JavaScript, challenges players to remember and repeat a sequence of colors and sounds, testing both memory and reflexes in a fun and interactive way.</p>
-            <a href="https://github.com/Shubh0433/Simon-Game/"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="https://simongame0433.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
